# CO2MPAS-TA

./: .dockerignore  .gitattributes  .gitchangelog.rc  .gitchangelog.tpl  .gitignore  .polyvers.yaml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CONTRIBUTING.rst  Makefile  Makefile.defs  PAST_AUTHORS.rst  README.rst  build.sh  logconf.yaml  logconf.yml  pypi.rst  pyproject.toml  setup.cfg  setup.py  vendorize.toml
WebStamp/: .gitignore  CHANGES.rst  requirements.txt
co2mpas/: __init__.py  __main__.py  _version.py  batch.py  cli.py  co2mpas_output_template.xlsx  co2mpas_template.xlsx  comparable.py  conf.py  datasync.py  defaults.py  docoptutils.py  plan.py  plot.py  report.py  tkdialog.py  tkui.py  utils.py
doc/: PAST_AUTHORS.rst  allinone.rst  api.rst  changes.rst  conf.py  faq.rst  glossary.rst  index.rst  install.rst  intro.rst  model.rst  names.rst  quick.rst  tutorial.rst  usage.rst
docker/: Dockerfile  README.rst  build.sh  docker-compose.yml  setup.cfg
pCO2DEPS/: Makefile  README.rst  setup.cfg  setup.py
pCO2DICE/: Makefile  README.rst  pyproject.toml  setup.py
pCO2GUI/: .gitignore  Makefile  README.rst  setup.cfg  setup.py
pCO2SIM/: .dockerignore  .gitignore  Makefile  README.rst  setup.cfg  setup.py
pWebStamper/: wsgi.py.SAMPLE
requirements/: all.pip  base.pip  cli.pip  co2mpas-freeze-AIO-1.7.3.txt  co2mpas-freeze-AIO-UP-1.7.3.post2.dev0.txt  co2mpas-freeze-AIO-UP-v2a0.txt  conda_requirements.sh  dev.pip  dice.pip  exe.conda  exe.pip  gui.pip  install_conda_reqs.sh  install_requirements.sh  io.pip  plot.pip  rtd.pip  sync.pip  test.pip
(+478 files in other folders)
