## Python's setup.cfg:
#   Created on 5 Aug 2014
#
[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[global]
## Building binary packages (e.g. eggs, wheels) from non-engraved
#  sources might not work - a *setuptools* check prevents that,
# and setting this option to `true` relaxes that check.
skip_polyversion_check = false

[build_sphinx]
all_files = 1
build-dir = doc/_build

[nosetests]
detailed-errors=1
verbosity=2
exe=1

[flake8]
# E265 = comment blocks like @{ section, which it can't handle
# E266 = too many leading '#' for block comment
# E731 = do not assign a lambda expression, use a def
# W293 = Blank line contains whitespace
show-source = True
ignore = E265,W293,E266,E731
max-line-length = 120
exclude = build,dist,doc
